@@ -1,6 +1,7 @@
 [Project]
 name: "liblnk"
 status: "alpha"
+description: "a library to access the Windows Shortcut File (LNK) format"
 features: [
     "debug_output", "tests", "tools", "python",
     "source_package",
@@ -11,10 +12,10 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSQmluVC1YeDVvZWM/"
 
 [git]
-url: "https://code.google.com/p/liblnk/"
+url: "https://github.com/libyal/liblnk.git"
 
 [tests]
-features: ["valgrind"]
+features: ["profiles", "valgrind"]
 profiles: ["liblnk", "pylnk", "lnkinfo"]
 example_filename1: "calc.lnk"
 example_filename2: "wordpad.lnk"
@@ -26,7 +27,7 @@ names: ["lnkinfo"]
 [cygwin]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "cyglnk-0.dll"
 
 [gcc]
@@ -36,7 +37,7 @@ static_build_dependencies: []
 [mingw]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "liblnk-1.dll"
 
 [msvscpp]
