@@ -53,6 +53,9 @@ Bindings:
 * .net
 * java
 
+20140921
+* changes for project site move
+
 20140905
 * updated libfwsi version check
 
